--- a/app/src/main/res/layout/activity_pet_info.xml
+++ b/app/src/main/res/layout/activity_pet_info.xml
@@ -1,100 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".ui.home.PetInfoActivity">
-
-<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="30dp"
-    android:layout_marginVertical="10dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="种类"
-        android:textSize="20sp" />
-
-    <ImageView
-        android:id="@+id/pet_img"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentEnd="true"
-        app:srcCompat="@drawable/dog" />
-
-</RelativeLayout>
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="30dp"
-    android:layout_marginVertical="10dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="性别"
-        android:textSize="20sp" />
-
-    <RadioGroup
-        android:id="@+id/sex_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/sex_0_radio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="雌" />
-
-        <RadioButton
-            android:id="@+id/sex_1_radio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="雄" />
-    </RadioGroup>
-
-</RelativeLayout>
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="30dp"
-    android:layout_marginVertical="10dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="名称"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/pet_name_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:inputType="textPersonName"
-        android:text="狗勾"
-        android:textSize="20sp"
-        tools:ignore="TouchTargetSizeCheck" />
-
-</RelativeLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ui.home.PetInfoActivity">
 
     <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="30dp"
-    android:layout_marginVertical="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="种类"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/pet_img"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/dog" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="性别"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:id="@+id/sex_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/sex_0_radio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="雌" />
+
+            <RadioButton
+                android:id="@+id/sex_1_radio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="雄" />
+        </RadioGroup>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="名称"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/pet_name_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:inputType="textPersonName"
+            android:text="狗勾"
+            android:textSize="20sp"
+            tools:ignore="TouchTargetSizeCheck" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -111,7 +113,7 @@ tools:context=".ui.home.PetInfoActivity">
             android:text="132870479042"
             android:textSize="20sp" />
 
-</RelativeLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/brn_update"
@@ -120,7 +122,7 @@ tools:context=".ui.home.PetInfoActivity">
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="40dp"
         android:background="@color/colorAccent"
-        android:text="修改"/>
+        android:text="修改" />
 
     <Button
         android:id="@+id/btn_delete"
@@ -129,6 +131,6 @@ tools:context=".ui.home.PetInfoActivity">
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="30dp"
         android:background="#F44336"
-        android:text="删除"/>
+        android:text="删除" />
 
 </LinearLayout>
