--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -287,7 +287,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
-                                android:text="37℃"
+                                android:text="37.5℃"
                                 android:textSize="24sp" />
 
                             <TextView
@@ -369,7 +369,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center_vertical"
-                                android:text="点击查看"
+                                android:text="2.5V (?)"
                                 android:textSize="24sp" />
 
                             <TextView
