--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,16 +2,16 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_white"
-    android:id="@+id/swipe_refresh"
     tools:context=".ui.main.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
-        android:fillViewport="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -402,5 +402,6 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>>
+    </androidx.core.widget.NestedScrollView>
+    >
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
