登录注册界面，图标

--- a/app/src/main/res/layout/activity_pet_add.xml
+++ b/app/src/main/res/layout/activity_pet_add.xml
@@ -119,6 +119,7 @@
         android:id="@+id/brn_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="40dp"
         android:background="@color/colorAccent"
