--- a/app/src/main/res/layout/activity_pet_info.xml
+++ b/app/src/main/res/layout/activity_pet_info.xml
@@ -45,20 +45,20 @@
             android:textSize="20sp" />
 
         <RadioGroup
-            android:id="@+id/sex_group"
+            android:id="@+id/group_sex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/sex_0_radio"
+                android:id="@+id/radio_sex_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="雌" />
 
             <RadioButton
-                android:id="@+id/sex_1_radio"
+                android:id="@+id/radio_sex_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="雄" />
@@ -122,7 +122,8 @@
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="40dp"
         android:background="@color/colorAccent"
-        android:text="修改" />
+        android:text="修改"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/btn_delete"
@@ -131,6 +132,7 @@
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="30dp"
         android:background="#F44336"
-        android:text="删除" />
+        android:text="删除"
+        android:textColor="@color/white" />
 
 </LinearLayout>
