--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -44,7 +44,6 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/btn_pets_list"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline">
 
@@ -160,6 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="48dp"
         android:background="@color/colorPrimary"
+        android:textColor="@color/white"
         android:text="登录"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,5 +171,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
