--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -326,6 +326,7 @@
                 app:cardCornerRadius="16dp">
 
                 <LinearLayout
+                    android:id="@+id/btn_test"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="?android:attr/selectableItemBackground"
