修复圆形图片加载

--- a/app/src/main/res/layout/activity_pet_info.xml
+++ b/app/src/main/res/layout/activity_pet_info.xml
@@ -27,7 +27,7 @@
             android:layout_alignParentEnd="true"
             android:clickable="true"
             android:focusable="true"
-            app:srcCompat="@drawable/dog" />
+            tools:src="@drawable/dog" />
 
     </RelativeLayout>
 
