--- a/app/src/main/res/layout/activity_test_main.xml
+++ b/app/src/main/res/layout/activity_test_main.xml
@@ -30,7 +30,7 @@
                 android:orientation="horizontal"
                 android:padding="16dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     android:id="@+id/pet_img"
                     android:layout_width="96dp"
                     android:layout_height="96dp"
@@ -103,7 +103,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -186,7 +186,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -269,7 +269,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -352,7 +352,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
