--- a/app/src/main/res/layout/fragment_g_p_s.xml
+++ b/app/src/main/res/layout/fragment_g_p_s.xml
@@ -38,12 +38,12 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/pet_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/dog" />
+                tools:src="@drawable/dog" />
 
             <LinearLayout
                 android:layout_width="0dp"
