--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,12 +36,12 @@
                     android:orientation="horizontal"
                     android:padding="16dp">
 
-                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    <ImageView
                         android:id="@+id/pet_img"
                         android:layout_width="96dp"
                         android:layout_height="96dp"
                         android:layout_marginEnd="16dp"
-                        android:src="@drawable/dog" />
+                        tools:src="@drawable/dog" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -107,7 +107,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -189,7 +189,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -271,7 +271,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -354,7 +354,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
@@ -434,7 +434,7 @@
                         android:layout_marginVertical="8dp"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView
                             android:layout_width="36dp"
                             android:layout_height="36dp"
                             android:layout_marginEnd="16dp"
