--- a/app/src/main/res/layout/item_pet_list.xml
+++ b/app/src/main/res/layout/item_pet_list.xml
@@ -24,12 +24,12 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <ImageView
                 android:id="@+id/pet_img"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/dog" />
+                tools:src="@drawable/dog" />
 
             <LinearLayout
                 android:layout_width="0dp"
